Fixed inline line highlight padding, wrapping, and gutter background (#1501)
* Fix inline line highlight padding, wrapping, and gutter background
- Line highlight pad should match the parent
- Float the gutter left to force code and numbers not to wrap
- Provide a background for the gutter

* Use opaque color for code background

* Fix for root level stretched code blocks

* Normalize code block padding

* Revert normalization

--- a/src/assets/stylesheets/extensions/pymdown/_highlight.scss
+++ b/src/assets/stylesheets/extensions/pymdown/_highlight.scss
@@ -33,9 +33,13 @@
   // Inline line numbers
   [data-linenos]::before {
     position: sticky;
-    left: 0;
+    left: px2em(-16px, 13.6px);
     display: inline-block;
     margin-right: px2em(16px, 13.6px);
+    margin-left: px2em(-16px, 13.6px);
+    padding-left: px2em(16px, 13.6px);
+    float: left;
+    background-color: var(--md-code-bg-color);
     color: var(--md-default-fg-color--lighter);
     box-shadow: inset px2rem(-1px) 0 var(--md-default-fg-color--lightest);
     content: attr(data-linenos);
