--- a/src/assets/stylesheets/base/_colors.scss
+++ b/src/assets/stylesheets/base/_colors.scss
@@ -51,6 +51,6 @@
   --md-accent-bg-color--light:         var(--md-default-bg-color--light);
 
   // Code block color shades
-  --md-code-bg-color:                  hsla(0, 0%, 92.5%, 0.5);
+  --md-code-bg-color:                  hsla(0, 0%, 96%, 1);
   --md-code-fg-color:                  hsla(200, 18%, 26%, 1);
 }
